--- a/Codigo/Frota - web api/FrotaWeb/Views/MarcaVeiculo/Delete.cshtml
+++ b/Codigo/Frota - web api/FrotaWeb/Views/MarcaVeiculo/Delete.cshtml
@@ -11,10 +11,7 @@
         <a href="javascript:history.back()" class="btn btn-tertiary">
             <i class="fas fa-arrow-left"></i> Voltar
         </a>
-        <h1 class="delete-title">
-            <i class="fas fa-trash-alt"></i>
-            Excluir @entityName
-        </h1>
+        <h1 class="delete-title">Excluir @entityName</h1>
     </div>
 
     <div class="delete-card">
@@ -29,7 +26,10 @@
         <div class="delete-body">
             <div class="details-body">
                 <div class="details-item">
-                    <span class="details-label">Nome</span>
+                    <span class="details-label">
+                        <i class="fas fa-tag"></i>
+                        Nome
+                    </span>
                     <span class="details-value">@Model.Nome</span>
                 </div>
             </div>
