--- a/Codigo/Frota - web api/FrotaWeb/Views/ModeloVeiculo/Delete.cshtml
+++ b/Codigo/Frota - web api/FrotaWeb/Views/ModeloVeiculo/Delete.cshtml
@@ -11,10 +11,7 @@
         <a href="javascript:history.back()" class="btn btn-tertiary">
             <i class="fas fa-arrow-left"></i> Voltar
         </a>
-        <h1 class="delete-title">
-            <i class="fas fa-trash-alt"></i>
-            Excluir @entityName
-        </h1>
+        <h1 class="delete-title">Excluir @entityName</h1>
     </div>
 
     <div class="delete-card">
@@ -29,15 +26,24 @@
         <div class="delete-body">
             <div class="details-body">
                 <div class="details-item">
-                    <span class="details-label">Marca</span>
+                    <span class="details-label">
+                        <i class="fas fa-tags"></i>
+                        Marca
+                    </span>
                     <span class="details-value">@Model.IdMarcaVeiculo</span>
                 </div>
                 <div class="details-item">
-                    <span class="details-label">Nome</span>
+                    <span class="details-label">
+                        <i class="fas fa-car-side"></i>
+                        Nome
+                    </span>
                     <span class="details-value">@Model.Nome</span>
                 </div>
                 <div class="details-item">
-                    <span class="details-label">Capacidade do Tanque</span>
+                    <span class="details-label">
+                        <i class="fas fa-gas-pump"></i>
+                        Capacidade do Tanque
+                    </span>
                     <span class="details-value">@Model.CapacidadeTanque L</span>
                 </div>
             </div>
