--- a/Codigo/Frota - web api/FrotaWeb/Views/ModeloVeiculo/Details.cshtml
+++ b/Codigo/Frota - web api/FrotaWeb/Views/ModeloVeiculo/Details.cshtml
@@ -10,24 +10,30 @@
         <a href="javascript:history.back()" class="btn btn-tertiary">
             <i class="fas fa-arrow-left"></i> Voltar
         </a>
-        <h1 class="details-title">
-            <i class="fas fa-eye"></i>
-            Visualizar @entityName
-        </h1>
+        <h1 class="details-title">Visualizar @entityName</h1>
     </div>
 
     <div class="details-card">
         <div class="details-body">
             <div class="details-item">
-                <span class="details-label">Marca</span>
+                <span class="details-label">
+                    <i class="fas fa-tags"></i>
+                    Marca
+                </span>
                 <span class="details-value">@Model.IdMarcaVeiculo</span>
             </div>
             <div class="details-item">
-                <span class="details-label">Nome</span>
+                <span class="details-label">
+                    <i class="fas fa-car-side"></i>
+                    Nome
+                </span>
                 <span class="details-value">@Model.Nome</span>
             </div>
             <div class="details-item">
-                <span class="details-label">Capacidade do Tanque</span>
+                <span class="details-label">
+                    <i class="fas fa-gas-pump"></i>
+                    Capacidade do Tanque
+                </span>
                 <span class="details-value">@Model.CapacidadeTanque L</span>
             </div>
         </div>
