--- a/Codigo/Frota - web api/FrotaWeb/Views/MarcaVeiculo/Edit.cshtml
+++ b/Codigo/Frota - web api/FrotaWeb/Views/MarcaVeiculo/Edit.cshtml
@@ -10,10 +10,7 @@
         <a href="javascript:history.back()" class="btn btn-tertiary">
             <i class="fas fa-arrow-left"></i> Voltar
         </a>
-        <h1 class="edit-title">
-            <i class="fas fa-edit"></i>
-            Editar @entityName
-        </h1>
+        <h1 class="edit-title">Editar @entityName</h1>
     </div>
 
     <div class="edit-card">
