--- a/Codigo/Frota - web api/FrotaWeb/Views/Vistoria/Delete.cshtml
+++ b/Codigo/Frota - web api/FrotaWeb/Views/Vistoria/Delete.cshtml
@@ -1,51 +1,83 @@
 ﻿@model FrotaWeb.Models.VistoriaViewModel
+@using System.Globalization
 
+@{
+    var culture = new CultureInfo("pt-BR");
+    var entityName = "Vistoria";
+    var controllerName = "Vistoria";
+    var idValue = Model.Id;
+}
 
-<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-<link rel="stylesheet" href="~/css/form.css" asp-append-version="true" />
+<div class="delete-page">
+    <div class="delete-header">
+        <a href="javascript:history.back()" class="btn btn-tertiary">
+            <i class="fas fa-arrow-left"></i> Voltar
+        </a>
+        <h1 class="delete-title">Excluir @entityName</h1>
+    </div>
 
-<main class="container mt-4">
-    <h4 class="page-title fs-2">
-        <i class="fa fa-clipboard-check mr-3"></i>
-        Vistoria
-    </h4>
-    <h1 class="my-text-label fs-3 mt-4 mb-4">Excluir Vistoria</h1>
-    <div class="creator-form fs-5">
-        <div class="row mb-3">
-            <div class="col-md-6">
-                <div class="type-container offset-md-1 itens-center">
-                    <label class="label">Data</label>
-                    <p>@Model.Data</p>
-                </div>
+    <div class="delete-card">
+        <div class="delete-warning">
+            <div class="delete-warning-icon">
+                <i class="fas fa-exclamation-triangle"></i>
             </div>
-            <div class="col-md-6">
-                <div class="type-container offset-md-2 itens-center">
-                    <label class="label">Problemas</label>
-                    <p>@Model.Problemas</p>
+            <h3 class="delete-warning-title">Tem certeza que deseja excluir?</h3>
+            <p class="delete-warning-text">Esta ação não pode ser desfeita. Todos os dados relacionados serão permanentemente removidos.</p>
+        </div>
+
+        <div class="delete-body">
+            <div class="details-body">
+                <div class="details-item">
+                    <span class="details-label">
+                        <i class="fas fa-hashtag"></i>
+                        Código
+                    </span>
+                    <span class="details-value">@Model.Id</span>
+                </div>
+                <div class="details-item">
+                    <span class="details-label">
+                        <i class="fas fa-calendar-alt"></i>
+                        Data
+                    </span>
+                    <span class="details-value">@Model.Data.ToString("dd/MM/yyyy", culture)</span>
+                </div>
+                <div class="details-item">
+                    <span class="details-label">
+                        <i class="fas fa-tag"></i>
+                        Tipo
+                    </span>
+                    <span class="details-value">@Model.Tipo</span>
+                </div>
+                <div class="details-item">
+                    <span class="details-label">
+                        <i class="fas fa-user-tie"></i>
+                        Responsável
+                    </span>
+                    <span class="details-value">@Model.IdPessoaResponsavel</span>
+                </div>
+                <div class="details-item">
+                    <span class="details-label">
+                        <i class="fas fa-exclamation-triangle"></i>
+                        Problemas
+                    </span>
+                    <span class="details-value">@Model.Problemas</span>
                 </div>
             </div>
         </div>
-        <div class="row mb-3">
-            <div class="col-md-6">
-                <div class="type-container offset-md-1 itens-center">
-                    <label class="label">Tipo</label>
-                    <p>@Model.Tipo</p>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="type-container offset-md-2 itens-center">
-                    <label class="label">Responsável</label>
-                    <p>@Model.IdPessoaResponsavel</p>
-                </div>
-            </div>
-        </div>
-        <form asp-action="Delete" class="row mt-4">
-            <div class="col-12 col-md-6 mb-2 mb-md-0 itens-center">
-                <a asp-action="Index" class="my-button btn btn-danger btn-sm w-50 w-md-auto">Voltar</a>
-            </div>
-            <div class="col-12 col-md-6 d-flex justify-content-md-end itens-center">
-                <input type="submit" value="Excluir" class="my-button btn btn-success btn-sm w-50 w-md-auto botao-sucesso" />
+
+        <form asp-action="Delete" method="post" class="delete-form">
+            @if (idValue != null)
+            {
+                <input type="hidden" name="id" value="@idValue" />
+            }
+            <div class="form-actions">
+                <a asp-action="Index" asp-controller="@controllerName" class="btn btn-secondary">
+                    <i class="fas fa-times"></i> Cancelar
+                </a>
+                <button type="submit" class="btn btn-danger">
+                    <i class="fas fa-trash-alt"></i> Confirmar Exclusão
+                </button>
             </div>
         </form>
     </div>
-</main>
+</div>
